# FastFDTD

./: .gitignore  CMakeLists.txt  README.md  script.py  setup.py
FastFDTD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: bind_interface.cpp  fdtd_timestep.cu  solver.cu  solver_func.h  solver_matriz.h
